--- a/GD.FinishingSystem.WEB/Views/RuloMigration/CreateOrUpdate.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloMigration/CreateOrUpdate.cshtml
@@ -84,9 +84,9 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
-                    <label asp-for="LoteLetter" class="control-label"></label>
-                    <input asp-for="LoteLetter" class="form-control" />
-                    <span asp-validation-for="LoteLetter" class="text-danger"></span>
+                    <label asp-for="Stop" class="control-label"></label>
+                    <input asp-for="Stop" class="form-control" />
+                    <span asp-validation-for="Stop" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
@@ -98,9 +98,9 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
                 <div class="form-group">
-                    <label asp-for="BeamStop" class="control-label"></label>
-                    <input asp-for="BeamStop" class="form-control" />
-                    <span asp-validation-for="BeamStop" class="text-danger"></span>
+                    <label asp-for="IsToyota" class="control-label"></label>
+                    <input asp-for="IsToyota" class="form-control" />
+                    <span asp-validation-for="IsToyota" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-12">
