--- a/GD.FinishingSystem.WEB/Views/RuloMigration/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloMigration/Delete.cshtml
@@ -43,10 +43,10 @@
             @Html.DisplayFor(model => model.Lote)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LoteLetter)
+            @Html.DisplayNameFor(model => model.Stop)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LoteLetter)
+            @Html.DisplayFor(model => model.Stop)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Beam)
@@ -55,10 +55,10 @@
             @Html.DisplayFor(model => model.Beam)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BeamStop)
+            @Html.DisplayNameFor(model => model.IsToyota)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BeamStop)
+            @Html.DisplayFor(model => model.IsToyota)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Loom)
