--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -137,7 +137,18 @@
                         }
 
                     </div>
-
+                    <div class="nav">
+                        <div class="sb-sidenav-menu-heading">Configuration</div>
+                        @if (User.IsInRole("SystemPrinter", AuthType.Full))
+                        {
+                            <a class="nav-link" asp-controller="SystemPrinter" asp-action="Index">
+                                <div class="sb-nav-link-icon">
+                                    <i class="lni lni-printer"></i>
+                                </div>
+                                System Printer
+                            </a>
+                        }
+                    </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
